# coleman_bulge_density_model

./: .gitignore  README.md  build_package_data.py  pyproject.toml
.github/workflows/: publish.yml
coleman_bulge_density/: __init__.py  model.py
