[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coleman_bulge_density_model"
version = "0.2.0"
description = "A vectorized implementation of the Coleman et al. (2020) Milky Way bulge density model."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "jax>=0.4.23",
    "jaxlib>=0.4.23"
]

[tool.setuptools.packages.find]
include = ["coleman_bulge_density*"]

[tool.setuptools.package-data]
"coleman_bulge_density" = ["*.npz"]