[build-system]
# Add setuptools_scm to your build requirements
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "coleman_bulge_density_model"
dynamic = ["version"]
description = "A vectorized implementation of the Coleman et al. (2020) Milky Way bulge density model."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "jax[cpu]>=0.4.0" # Assuming you added JAX
]

# Add this empty block at the bottom to activate setuptools_scm
[tool.setuptools_scm]